--- a/home.html
+++ b/home.html
@@ -8,31 +8,31 @@
 <TABLE WIDTH=1920 BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR>
 		<TD COLSPAN=5>
-			<IMG SRC="images/home_01.gif" WIDTH=1920 HEIGHT=21></TD>
+			<IMG SRC="home_01.gif" WIDTH=1920 HEIGHT=21></TD>
 	</TR>
 	<TR>
 		<TD COLSPAN=3>
-			<IMG SRC="images/home_02.gif" WIDTH=295 HEIGHT=2></TD>
+			<IMG SRC="home_02.gif" WIDTH=295 HEIGHT=2></TD>
 		<TD ROWSPAN=2>
 			<A HREF="https://noely5504.github.io/ts.merchandise/ts.merchandise.html">
-				<IMG SRC="images/home_03.gif" WIDTH=234 HEIGHT=33 BORDER=0></A></TD>
+				<IMG SRC="home_03.gif" WIDTH=234 HEIGHT=33 BORDER=0></A></TD>
 		<TD ROWSPAN=3>
-			<IMG SRC="images/home_04.gif" WIDTH=1391 HEIGHT=1059></TD>
+			<IMG SRC="home_04.gif" WIDTH=1391 HEIGHT=1059></TD>
 	</TR>
 	<TR>
 		<TD ROWSPAN=2>
-			<IMG SRC="images/home_05.gif" WIDTH=158 HEIGHT=1057></TD>
+			<IMG SRC="home_05.gif" WIDTH=158 HEIGHT=1057></TD>
 		<TD>
 			<A HREF="https://noely5504.github.io/ts.events/ts.events.html">
-				<IMG SRC="images/home_06.gif" WIDTH=129 HEIGHT=31 BORDER=0></A></TD>
+				<IMG SRC="home_06.gif" WIDTH=129 HEIGHT=31 BORDER=0></A></TD>
 		<TD ROWSPAN=2>
-			<IMG SRC="images/home_07.gif" WIDTH=8 HEIGHT=1057></TD>
+			<IMG SRC="home_07.gif" WIDTH=8 HEIGHT=1057></TD>
 	</TR>
 	<TR>
 		<TD>
-			<IMG SRC="images/home_08.gif" WIDTH=129 HEIGHT=1026></TD>
+			<IMG SRC="home_08.gif" WIDTH=129 HEIGHT=1026></TD>
 		<TD>
-			<IMG SRC="images/home_09.gif" WIDTH=234 HEIGHT=1026></TD>
+			<IMG SRC="home_09.gif" WIDTH=234 HEIGHT=1026></TD>
 	</TR>
 </TABLE>
 <!-- End ImageReady Slices -->
